<resources>
    <string name="app_name">茶叶商城</string>

    <string name="account">账号</string>
    <string name="phone">账号(手机号码)</string>
    <string name="password">密码</string>
    <string name="newpassword">新密码</string>
    <string name="ensurePass">确认密码</string>
    <string name="ennewPass">确认新密码</string>
    <string name="makeSure">确定</string>
    <string name="telephone">手机号码</string>
    <string name="mail">邮箱</string>
    <string name="login">登录</string>
    <string name="forget_password">忘记密码</string>
    <string name="change_password">修改密码</string>
    <string name="register">注册</string>
    <string name="noInfo">暂无信息</string>
    <string name="admin">管理员</string>
    <string name="agent">代理商</string>
    <string name="user">用户</string>
    <string name="userDetail">用户详情</string>
    <string name="userManage">用户管理</string>
    <string name="agentManage">代理商管理</string>
    <string name="storeManage">商铺管理</string>
    <string name="checkAgent">代理商审核</string>
    <string name="lookStore">查看商店</string>
    <string name="store">商店</string>
    <string name="address">地址</string>
    <string name="goodaddress">收货地址</string>
    <string name="description">简介</string>
    <string name="coupon">优惠</string>
    <string name="nowno">暂无</string>
    <string name="checking">审核中</string>
    <string name="passed">已通过</string>
    <string name="pass">通过</string>
    <string name="notpass">不通过</string>
    <string name="notpassed">未通过</string>
    <string name="orderManage">订单管理</string>
    <string name="editinfo">修改信息</string>
    <string name="logout">账号注销</string>
    <string name="quitApp">退出程序</string>

    <string name="teaclass">茶叶分类</string>
    <string name="soldTea">代理茶叶</string>
    <string name="teaStore">茶叶商店</string>
    <string name="addclass">添加分类</string>
    <string name="classname">名称</string>
    <string name="username">用户名</string>
    <string name="edit">编辑</string>
    <string name="createTea">新建茶叶信息</string>
    <string name="alterClass">修改分类</string>
    <string name="price">价格</string>
    <string name="stock">库存</string>
    <string name="soldAmount">销售量</string>
    <string name="newStore">新建商店</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="negative">取消</string>
    <string name="positive">确认</string>
    <string name="delete">删除</string>
    <string name="move">移动</string>
    <string name="editTea">修改茶叶信息</string>
    <string name="needInfo">请输入所需信息！</string>
    <string name="addAddress">添加地址</string>
    <string name="putAddress">修改地址</string>
    <string name="aname">名称</string>
    <string name="approveManage">认证管理</string>
    <string name="approve">认证</string>
    <string name="doapprove">申请认证</string>
    <string name="noapprove">未认证</string>
    <string name="failapprove">认证失败</string>
    <string name="changepass">修改密码</string>
    <string name="status">状态</string>
    <string name="couponManage">优惠券管理</string>
    <string name="addcoupon">添加优惠券</string>
    <string name="gift">赠品</string>
    <string name="discount">折扣</string>
    <string name="editStoreInfo">编辑商铺信息</string>
    <string name="shoppingcar">购物车</string>
    <string name="num">数量</string>
    <string name="addcar">加入购物车</string>
    <string name="sumPrice">总价</string>
    <string name="pay">支付</string>
    <string name="no">编号</string>
    <string name="time">时间</string>
    <string name="orderInfo">订单详情</string>
</resources>
