<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include
        layout="@layout/include_toolbar"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/margin">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/et_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:editable="false"
                android:hint="@string/store"
                android:maxLines="1"
                />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/et_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:editable="false"
                android:hint="@string/telephone"
                android:maxLines="1"
                />

        </android.support.design.widget.TextInputLayout>

        <ImageView
            android:id="@+id/iv_licence"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:scaleType="fitXY"/>

        <LinearLayout
            android:id="@+id/pass_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/bn_pass"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_weight="1"
                android:background="@drawable/selector_choose"
                android:text="@string/pass"
                android:textColor="@color/white"
                android:textSize="@dimen/big_text"
                android:textStyle="bold"/>

            <Button
                android:id="@+id/bn_nopass"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_weight="1"
                android:layout_margin="@dimen/margin"
                android:background="@drawable/selector_choose"
                android:text="@string/notpass"
                android:textColor="@color/white"
                android:textSize="@dimen/big_text"
                android:textStyle="bold"/>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>
